[gd_scene load_steps=6 format=2]

[ext_resource path="res://Autoload/Game/Game.gd" type="Script" id=1]
[ext_resource path="res://GUI/FadeLayer/Fade_layer.tscn" type="PackedScene" id=2]
[ext_resource path="res://GUI/PauseLayer/PauseLayer.tscn" type="PackedScene" id=3]
[ext_resource path="res://GUI/OptionsMenu/OptionsMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://GUI/HTML5Focus/HTMLfocus.tscn" type="PackedScene" id=5]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="PauseLayer" parent="." instance=ExtResource( 3 )]
layer = 100

[node name="OptionsMenu" parent="." instance=ExtResource( 4 )]
layer = 101

[node name="FadeLayer" parent="." instance=ExtResource( 2 )]
layer = 128

[node name="FadeTween" type="Tween" parent="FadeLayer"]

[node name="Music" type="AudioStreamPlayer" parent="."]
pause_mode = 2
bus = "Music"

[node name="Sounds" type="AudioStreamPlayer" parent="."]
pause_mode = 2
bus = "SFX"

[node name="HTMLfocus" parent="." instance=ExtResource( 5 )]
layer = 128
[connection signal="tween_completed" from="FadeLayer/FadeTween" to="." method="_on_FadeTween_tween_completed"]
